--- a/about.html
+++ b/about.html
@@ -5,12 +5,8 @@ Testing Testing 123
 
 <div class="pagination" style="text-align: center;">
 
-  {% if paginator.next_page %}
-    <h2><a href="{{ paginator.next_page_path }}" class="next">- more posts -</a></h2>
-  {% endif %}
-
-  {% if paginator.previous_page %}
-    <h2><a href="{{ paginator.previous_page_path }}" class="previous">- previous page -</a></h2>
-  {% endif %}
+ 
+    <h2><a href="http://ouraylesbury.org" class="next">- Latest blog posts -</a></h2>
+  
 
 </div>
