--- a/about.html
+++ b/about.html
@@ -1,7 +1,36 @@
 ---
 layout: default
+Title: "Fighting to save OUR Aylesbury from THEIR regeneration"
 ---
-Testing Testing 123
+We are the Aylesbury estate regeneration's forgotten people. The regeneration is [forcing us out with derisory compensation offers](http://heygatewashome.org/img/SNWolverton.pdf) using [compulsory purchase orders](http://heygatewashome.org/img/SouthwarkNews9July2014.pdf).
+
+[Investigations by the Guardian](https://www.theguardian.com/cities/2016/sep/20/aylesbury-estate-ruling-future-regeneration-sajid-javid) have shown how the Council as paying as little as £75k for a large (47m2) 1-bed flat, when equivalent ex-council properties in the area are selling for five times this amount.
+
+The Council says we can take up a 'shared equity' option on the new housing association homes being built on the estate, but these come with restrictions in the small print limiting a number of things like: succession rights, capital uplift, assignment rights, subletting clauses. We are also forced to sign [confidentiality agreements](https://halag.files.wordpress.com/2015/11/confidentiality_agreement.pdf) preventing us from talking about the restrictive clauses in the lease. Read more about the shared equity deal [here..](http://ouraylesbury.org/shared-equity-small-print/)
+
+It comes as no surprise that [only 6 of the 285 leaseholders](https://www.whatdotheyknow.com/request/aylesbury_estate_regeneration_de#incoming-1055033) decanted from the estate to date have taken up this shared equity deal.
+
+During the initial consultation on the regeneration of the estate, leaseholders were offered a ‘like-for-like’ swap – i.e. the option of swapping the lease on their home on the Aylesbury for an equivalent size council-owned property elsewhere in the borough. This guarantee was [enshrined in formal Council policy](http://www.southwark.gov.uk/download/downloads/id/1850/executive_report) at the time and detailed in the Council's [handbook for leaseholders](https://www.whatdotheyknow.com/request/331856/response/818864/attach/3/64145%20RedR%20Homeowner.pdf).
+
+![](https://i1.wp.com/35percent.org/img/aylesburyhandbookswap.png)
+*Extract from the Council's [handbook for leaseholders](https://www.whatdotheyknow.com/request/331856/response/818864/attach/3/64145%20RedR%20Homeowner.pdf) detailing like-for-like option*
+
+However, the like-for-like option was later removed from policy shortly after the decant commenced. The Council has made no clear explanation as to why it was removed and has given no substantive reason for rejecting our repeated requests to have it reinstated. 
+
+We have been [fighting](http://35percent.org/2015-05-02-aylesbury-estate-compulsory-purchase-order-public-inquiry/) the Council's [attempt to evict us](http://www.bbc.co.uk/news/uk-england-london-29098960) using compulsory purchase powers and last year we scored a major victory when the Secretary of State [rejected](https://www.theguardian.com/society/2016/sep/16/government-blocks-controversial-plan-to-force-out-housing-estate-residents) Southwark’s application for CPO powers in a landmark legal decision. The secretary of state [said](http://35percent.org/img/Decision_Letter_Final.pdf) that our basic human and equalities rights were being breached by the Council as a result of many elderly leaseholders and those from black and ethnic minority groups were being forced to relocate because of the scheme.
+
+![](/ouraylesbury/img/oscprotest2.jpg)
+
+Instead of acknowledging its breach of our human rights and remedying it by improving its offers or re-instating the like-for-like policy, Southwark chose to challenge the Secretary of State's decision in the High Court. Instead of wasting of engaging in a costly High Court battle, the Secretary of State decided to quash his decision notice and hold a re-run of the public inquiry. This is now due to be held in January 2018 and a revised decision will follow several months after the three-week inquiry concludes. 
+
+We have received a lot of support from local groups and other residents groups across the country who understand the implications of the case, which has been termed by professionals as a [potential legal 'right to a community'](http://hsfnotes.com/realestatedevelopment/2016/09/28/a-new-right-to-a-community-decision-by-the-secretary-of-state-not-to-confirm-the-cpo-for-aylesbury-estate/) and may set a [precedent for stopping the gentrification of council estates](https://www2.le.ac.uk/offices/press/press-releases/2016/september/aylesbury-decision-could-set-precedent-for-stopping-gentrification-of-council-estates-says-expert). To date we have received around £12,000 in donations from 300 people who have contributed to our [legal fund](https://www.gofundme.com/aylesbury-the-right-to-a-community-2uefgf2s) because they want to see the legal precedent defended. 
+
+If you would like to get in touch please email us at haleaseholders@gmail.com or via twitter at @aylesburyalag
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Z1j_UP39cn0" frameborder="0" allowfullscreen></iframe>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RtvghCKNJjQ" frameborder="0" allowfullscreen></iframe>
+
 
 <div class="pagination" style="text-align: center;">
 
